# vesper

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  check_api.rs  check_gtk.rs  io.github.TheRealShek.vesper.desktop  io.github.TheRealShek.vesper.yml  patch.py  scratch.rs  tech_issues_docs.md  test_aspect.rs  test_gesture.rs  test_video.rs  tx_test.rs  vesper.db  vesper.db-shm  vesper.db-wal
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: 01_Vision.md  02_Architecture.md  03_Implementation.md  04_Product_Spec.md  05_Visual_Design.md  DEPLOYMENT.md  FUTURE_IDEAS.md  PRODUCT_CONTRACT.md  UI_UX.md  deployment.md  future_ideas.md  tech_audit.md  tech_debt.md
examples/: test_gdt.rs  test_panic.rs  test_viewer.rs
src/: config.rs  events.rs  lock.rs  logging.rs  main.rs  scan.rs  state.rs  test_banner.rs  test_scroll.rs  thumbnail.rs
src/backend/: app_loop.rs  concurrency.rs  live_update.rs  liveness.rs  maintenance.rs  mod.rs  watcher.rs
src/db/: error.rs  media.rs  migrations.rs  mod.rs  models.rs  roots.rs  scan_errors.rs  schema.rs  search.rs  search_normalization.rs  settings.rs  tags.rs
src/index/: error.rs  ignore_rules.rs  media.rs  mod.rs  walker.rs
src/ui/: filter_controller.rs  filter_sort.rs  grid_cell.rs  header.rs  mod.rs  model.rs  scratch.rs  scratch2.rs  selection_bar.rs  settings.rs  shortcuts.rs  sidebar.rs  style.css  viewer.rs  window.rs
