[package]
name = "vesper"
version = "0.1.0"
edition = "2024"





[dependencies]
anyhow = "1.0.102"
gtk4 = { version = "0.11.3", features = ["v4_12"] }
ignore = "0.4.26"
libadwaita = { version = "0.9.1", features = ["v1_4"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
image = "0.25.10"
dirs = "6.0.0"
[dev-dependencies]
tempfile = "3.27.0"






