[package]
name = "vesper"
version = "0.1.0"
edition = "2024"
default-run = "vesper"





[dependencies]
anyhow = "1.0.102"
gtk4 = { version = "0.11.3", features = ["v4_12"] }
ignore = "0.4.26"
libadwaita = { version = "0.9.1", features = ["v1_4"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
image = "0.25.10"
dirs = "6.0.0"
libc = "0.2.177"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
file-rotate = "0.8"
glib = "0.22.7"
unicode-normalization = "0.1.25"
[dev-dependencies]
tempfile = "3.27.0"
# test-util enables tokio's paused clock (start_paused) so the B-3 retry-backoff
# schedule can be tested deterministically without real 36s waits.
tokio = { version = "1.52.3", features = ["test-util"] }

[package.metadata.deb]
maintainer = "TheRealShek"
copyright = "2024 TheRealShek"
license-file = ["LICENSE", "4"]
depends = "$auto, ffmpeg, libadwaita-1-0 (>= 1.0.0)"
extended-description = "Keyboard-first local media gallery for Linux."
assets = [
    ["target/release/vesper", "usr/bin/", "755"],
    ["io.github.TheRealShek.vesper.desktop", "usr/share/applications/", "644"],
    ["assets/logo.png", "usr/share/icons/hicolor/512x512/apps/io.github.TheRealShek.vesper.png", "644"],
]
